# amm-backend

./: foundry.toml  package.json  pyproject.toml
src/: IWETH9.sol
src/core/: YapeswapERC20.sol  YapeswapFactory.sol  YapeswapPair.sol
src/math/: FixedPoint.sol  FullMath.sol  Sqrt.sol
src/periphery/: YapeswapRouter.sol
src/periphery/interfaces/: IYapeswapRouter.sol
src/periphery/libraries/: YapeswapLibrary.sol  YapeswapOracleLibrary.sol
src/test/: Common.sol  YapeswapFactory.t.sol  YapeswapPair.t.sol  YapeswapRouter.t.sol  console.sol
