[tool.poetry]
name = "yapeswap"
version = "0.1.0"
description = ""
authors = ["Alcibiades <playerunknown@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slither-analyzer = "^0.8.2"
web3 = "^5.26.0"

[tool.poetry.dev-dependencies]
bpython = "^0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
